work and education updates and added google maps support for work and education.

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,9 +4,9 @@
       <div class="jumbotron animated zoomIn">
       <h1 class="text-center signature uppercase"><b> About This Site </b></h1>
       <br>
-      <h4><b>Welcome!</b> This is a personal website project of mine, which I use to experiment with new styles and techniques.
-        Im always working on different ways to improve this site.
-         The purpose of the sight is to show off some of my abilities and experience in a format that is interactive and informative.
+      <h4><b>Welcome!</b> <!--I use this website to experiment with new styles and techniques.-->
+         The purpose of the sight is to show off some of my web development experience in an interactive and informative fashion.
+         Im always working on different ways to improve this site in my free time.
          Feel free to contact me if you have any comments, questions, or feedback.
         <br>
         <p class="signature">Nicholas Glenn</p>
