--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,36 +1,22 @@
 <div class="container">
   <div class="row d-flex ">
-    <!-- <div class="card  h-100 ">
-      <h2 class="card-header primary-colortext-center black-text" >SAF-Holland</h2>
-      <div class="card-body black-text">
-        <h4 class="card-title text-center">
-            Web & Mobile Technologies Intern
-            <br>
-            April 2017 - Current
-          </h4>
-        <ul class="fa-ul">
-          <li>
-            <i class="fa fa-chevron-right"></i> School of Computer & Information Systems Dean's List for multiple semesters.
-        </li>
-        </ul>
-      </div>
-      <div class="card-footer">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Read More
-        </button>
-      </div>
-    </div> -->
-<div class="col">
+
+<div class="col animated rotateInUpLeft">
 <div class="accordion" id="accordion"  style="background-color: black !important;">
-    <div class="card" >
-      <div class="card-header text-center"  type="button"  id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        <h5 class="mb-0">
+    <div class="card" style="border-top: none !important;" >
+      <div class="card-header white-text special-color-dark text-center waves-effect"  type="button"  id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" >
+        <h2 class="mb-0">
             SAF-Holland
             <br>
+        </h2>
+        <h4 class="mb-0">
             Web & Mobile Technologies Intern
             <br>
-            April 2017 - Current
-        </h5>
+        </h4>
+          <p class="mb-0">
+            May 2017 - Current
+          </p>
+        
       </div>
   
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
@@ -39,58 +25,257 @@
                 Implemented DevOps using Bitbucket and Slack for the Web Development team.
             </li>
             <li>
-                 Designed and implemented dynamic Content Management Systems for websites.
+                 Designed and implemented dynamic Content Management Systems for internal websites.
             </li>
-            <li class="listItem">
+            <li>
                 Developed and supported multiple websites in different languages and regions.
             </li>
-            <li class="listItem">
+            <li>
                 Managed multiple JSON databases.
             </li>
-            <li class="listItem">
+            <li>
                 Resolved Helpdesk tickets assigned to the Web Development team.
             </li>
-            <li class="listItem">
+            <li>
                 Migrated data in MongoDB.
             </li>
+            <li>
+                Developed and implemented inventory management software for testing labs in North America.
+            </li>
+            <li>
+                Work with contractors on software implementation.
+            </li>
+            <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#safModal">About Comapany </button>                                 
         </div>
       </div>
+      
     </div>
 
     <div class="card">
-      <div class="card-header secondary-color text-center" id="headingTwo"  type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        <h5 class="mb-0">
+      <div class="card-header white-text special-color-dark text-center" id="headingTwo"  type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <h2 class="mb-0">
             Grand Valley State University
-            <br>
-            IT Helpdesk
-            <br>
-
-        </h5>
+        </h2>  
+        <h4 class="mb-0">
+          IT Student Tech
+          <br>
+      </h4>
+        <p class="mb-0">
+          January 2017 - April 2017
+        </p>
       </div>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-        <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        <div class="card-body black-text">
+          <ul>
+              <li class="listItem">
+                  <p >Manage computer labs on campus.</p>
+                </li>
+                <li class="listItem">
+                  <p>Resolve IT Helpdesk tickets.</p>
+                </li>
+                <li class="listItem">
+                  <p>Provide IT support to students and faculty.</p>
+                </li>
+                <li class="listItem">
+                  <p>Manage and maintain classroom and lab equipment.</p>
+                </li>
+          </ul>
+          <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#gvsuModal">About Comapany </button>                     
+          
         </div>
+        
       </div>
+      
+      
     </div>
 
     <div class="card">
-      <div class="card-header default-color text-center" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        <h5 class="mb-0">
+      <div class="card-header white-text special-color-dark text-center" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <h2 class="mb-0">
             Oakland University William Beaumont School of Medicine
             <br>
+        </h2>            
+        <h4 class="mb-0">            
             IT Helpdesk Intern
-            <br>
+            <br> 
+        </h4>
+        <p class="mb-0">
             April 2016 - August 2016
-        </h5>
+       </p>
       </div>
       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-        <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        <div class="card-body black-text">
+            <ul>
+                <li>
+                  <p>Developed a method to take physical inventory of all electronic assets for the School of Medicine.</p>
+                </li>
+                <li>
+                  <p>Worked with Apple Care to manage hardware issues covered under warranty.</p>
+                </li>
+                <li>
+                  <p>Assisted staff, faculty and students with computer issues.</p>
+                </li>
+                <li>
+                  <p>Loaded a custom image onto 130 new MacBook Pros using Casper Management Suite.</p>
+                </li>
+                <li>
+                  <p>Use of JAMF Software’s Casper Management Suite to manage Apple computers.</p>
+                </li>
+                <li>
+                  <p>Utilization of Code42 CrashPlan to backup and recover data on staff, faculty and student devices.</p>
+                </li>
+                <li>
+                  <p>Erasing hard drives to a Department of Defense standard using Darik’s Nuke And Boot (DBAN).</p>
+                </li>
+                <li>
+                  <p>Removal of viruses and malware from staff, faculty and student devices.</p>
+                </li>
+                <li>
+                  <p>Installation of anti-virus software on school devices. </p>
+                </li>
+                <li>
+                  <p>Maintenance of classroom equipment.</p>
+                </li>
+
+              </ul> 
+              <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#ouwbsmModal">About Comapany </button>                     
+            </div>
+      </div>
+      
+    </div>
+
+    <div class="card">
+      <div class="card-header white-text special-color-dark text-center" id="headingFour" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        <h2 class="mb-0">
+            Tim Hortons
+            <br>
+        </h2>
+        <h4 class="mb-0">
+            Team Member
+            <br> 
+        </h4>
+        <p class="mb-0">
+            April -  August 2016
+       </p>
+      </div>
+      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+        <div class="card-body black-text">
+            <ul>
+                <li>
+                  <p>Responsible for serving customers, utilizing POS systems and maintain product levels.</p>
+                </li>
+                <li>
+                  <p>Coordinated the nightly close process including cash management and security systems.</p>
+                </li>
+                <li>
+                  <p>Worked 30 hours per week while enrolled as a full-time student at Oakland University.</p>
+                </li>
+
+              </ul>        
+          <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#thModal">About Comapany </button>                             
         </div>
       </div>
+     
     </div>
   </div>
 </div>
 </div>
+
 </div>
+
+<div class="modal fade" id="safModal" tabindex="-1" role="dialog" aria-labelledby="safModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title black-text text-center" id="safModalLabel">SAF-Holland</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+                <div class="row">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2907.647944596398!2d-86.20479268408397!3d43.216872979138834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88197c4538599f43%3A0x440230b311a629e1!2sSAF-HOLLAND%2C+Inc.!5e0!3m2!1sen!2sus!4v1529685913636" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>                </div>
+              </div>
+
+              </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary form-control" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="gvsuModal" tabindex="-1" role="dialog" aria-labelledby="gvsuModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title black-text text-center" id="gvsuModalLabel">Grand Valley State University</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+                <div class="row">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2919.6805692409953!2d-85.89113518409033!3d42.96393547915097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8819a31f0c9d398f%3A0xea0367b3e0ec32fa!2sGrand+Valley+State+University!5e0!3m2!1sen!2sus!4v1529685939529" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>                </div>
+              </div>
+
+              </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary form-control" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ouwbsmModal" tabindex="-1" role="dialog" aria-labelledby="ouwbsmModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title black-text text-center" id="oouwbsmModalLabel">Oakland University William Beaumont School of Medicine</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+                <div class="row">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.3800856751036!2d-83.2174850840975!3d42.67449047916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824ea855e7303b1%3A0x4a1940c3f2e9015f!2sOakland+University+William+Beaumont+School+of+Medicine!5e0!3m2!1sen!2sus!4v1529686012708" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>                </div>
+              </div>
+
+              </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary form-control" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="thModal" tabindex="-1" role="dialog" aria-labelledby="thModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title black-text text-center" id="thModalLabel">Tim Hortons</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+                <div class="row">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.6789550418434!2d-83.13596428409764!3d42.6681582791675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824e9c54c716eb9%3A0xfade00f1fb6e169b!2sTim+Hortons!5e0!3m2!1sen!2sus!4v1529686038507" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>                </div>
+              </div>
+
+              </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary form-control" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script>
+  Waves.attach('.accordion', ['waves-effect']);
+  $(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
