--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -29,7 +29,7 @@
           
         </div>
         <div class="card-footer">        
-        <a class="btn form-control primary-color " href="https://www.gvsu.edu" taget="_blank">GVSU Website</a>
+        <a class="btn form-control primary-color" data-toggle="modal" data-target="#gvsuModal">GVSU Location</a>        
         </div>
       </div>
     </div>
@@ -56,9 +56,60 @@
             
         </div>
         <div class="card-footer">
-        <a class="btn form-control elegant-color " href="https://www.gvsu.edu" target="_blank">Oakland University Website</a>
+        <a class="btn form-control elegant-color" data-toggle="modal" data-target="#ouModal">Oakland University Location</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="gvsuModal" tabindex="-1" role="dialog" aria-labelledby="gvsuModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title black-text text-center" id="gvsuModalLabel">Where is Grand Valley State University?</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2919.6805692409953!2d-85.89113518409033!3d42.96393547915097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8819a31f0c9d398f%3A0xea0367b3e0ec32fa!2sGrand+Valley+State+University!5e0!3m2!1sen!2sus!4v1529684728157" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>  
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary form-control" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="ouModal" tabindex="-1" role="dialog" aria-labelledby="ouModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title black-text text-center" id="ouModalLabel">Where is Oakland University?</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+                <div class="row">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.6811826692356!2d-83.21079978409763!3d42.66811107916755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe994efb06dc14099!2sOakland+University!5e0!3m2!1sen!2sus!4v1529684650072" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+              </div>
+
+              </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary form-control" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyBdaRc3OxlrDuyduTtc226zYIgc4ccN1ys"></script>  -->
+<!-- AIzaSyBdaRc3OxlrDuyduTtc226zYIgc4ccN1ys -->
+
