--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -5,6 +5,16 @@
     border: none;
 }
 
-#headingOne{
-    background-color: #007bff;
+.card-body{
+    line-height: 35px;
+    font-weight: 200;
 }
+
+.card{
+    border-left: none;
+    border-right: none;
+    border-color: transparent;
+}
+
+
+
