--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -5,7 +5,7 @@
       <h1 class="text-center signature uppercase"><b> About This Site </b></h1>
       <br>
       <h4><b>Welcome!</b> <!--I use this website to experiment with new styles and techniques.-->
-         The purpose of the sight is to show off some of my web development experience in an interactive and informative fashion.
+         The purpose of this sight is to show off some of my web development skills in an interactive and informative fashion.
          Im always working on different ways to improve this site in my free time.
          Feel free to contact me if you have any comments, questions, or feedback.
         <br>
