Implemented privacy policy and added cookies. bug fixes and improvements

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -5,24 +5,14 @@
       <h1 class="text-center signature uppercase"><b> About This Site </b></h1>
       <br>
       <h4><b>Welcome!</b> <!--I use this website to experiment with new styles and techniques.-->
-         The purpose of this sight is to show off some of my web development skills in an interactive and informative fashion.
+         The purpose of this sight is to show off some of my web development skills and experiences in an interactive and informative fashion.
          Im always working on different ways to improve this site in my free time.
          Feel free to contact me if you have any comments, questions, or feedback.
         <br>
         <p class="signature">Nicholas Glenn</p>
       </h4>
       <br>
-      <!-- <h4>
-        <ul>
-        <li>This website is supposed to be hosted on Amazon AWS EC2 servers using a Windows based server.</li>
-        <br>
-        <li>The backend of this website is supported by NodeJS and Express. The front end of the website is supported by AngularJS 6</li>
-        <br>
-        <li>I am always looking for ways to imporve this site and learn new technologies to further my skills.</li>
-        <br>
-        <li>Eventually this sites content will be managed using a seperate web application. This will allow me to add new content and change content without rewritting the code for the side.</li>
-      </ul>
-     </h4> -->
+     
    </div>
     </div>
 </div>
