--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -25,10 +25,13 @@
                 <h4 class="h4class"><span class="rounded hoverable">SAP UI 5</span></h4>
               </li>
               <li>
+                  <h4 class="h4class"><span class="rounded hoverable">SAP Hybris (C/4HANA)</span></h4>
+                </li>
+              <li>
                 <h4 class="h4class"><span class="rounded hoverable">Bootstrap</span></h4>
               </li>
               <li>
-                <h4 class="h4class"><span class="rounded hoverable">AngularJS V1, V5, V6</span></h4>
+                <h4 class="h4class"><span class="rounded hoverable">AngularJS/Angular V2-6</span></h4>
               </li>
               <li>
                 <h4 class="h4class"><span class="rounded hoverable">NodeJS</span></h4>
@@ -54,6 +57,9 @@
               <li>
                 <h4 class="h4class"><span class="rounded hoverable">IIS</span></h4>
               </li>
+              <li>
+                  <h4 class="h4class"><span class="rounded hoverable">Apache2</span></h4>
+                </li>
               <li>
                 <h4 class="h4class"><span class="rounded hoverable">JAVA</span></h4>
               </li>
