--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -20,9 +20,18 @@
       </div>
   
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-        <div class="card-body black-text">
+        <div class="card-body black-text ">
             <li>
-                Implemented DevOps using Bitbucket and Slack for the Web Development team.
+                Designed and implemented dynamic Content Management System to display IT news and announcements. Allowed IT managers to relay IT information with all members of the organization.
+            </li>
+            <li>
+               Participated in the vendor selectiona and evaluation process for contractors.
+            </li>
+            <li>
+                Developed and supported multiple region and language dynamic external facing websites to reach customers effectively in all SAF-Holland markets. 
+            </li>
+            <li>
+                Mentored new interns with learning development standards and new website development.
             </li>
             <li>
                  Designed and implemented dynamic Content Management Systems for internal websites.
@@ -45,7 +54,10 @@
             <li>
                 Work with contractors on software implementation.
             </li>
-            <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#safModal">About Comapany </button>                                 
+            <li>
+               Insured global corporate websites complied with GDPR.
+            </li>
+            <button class="btn btn-success btn-lg form-control vertical-align-center" data-toggle="modal" data-target="#safModal">About Comapany </button>                                 
         </div>
       </div>
       
