--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,13 @@ nav{
 .routerPadding{
     padding-top:70px;
 }
+
+.cookieRow{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.nav-item:hover{
+    background-color: #FF8800;
+    /* background-color: #4285F4; */
+    border-radius: 5px;
+}
