--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,10 +22,14 @@
           <a class="nav-link" routerLink="/skills">
             <i class="fa fa-pencil"></i> Skills</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/privacy-policy">
+              <i class="fa fa-user-secret"></i>Privacy Policy</a>
+          </li>
 
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item" style="padding-right:15px;">
+        <li style="padding-right:15px;">
               <a class="nav-link" href="https://www.linkedin.com/in/nicholas-glenn-98b289106" target="_blank" >
                 <i class="fa fa-linkedin fa-2x lnpad white-text" aria-hidden="true"></i>
               </a>
@@ -42,21 +46,28 @@
         </li>
       </ul>
 
-      <!-- <ul class="navbar-nav">
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/contact">
-            <i class="fa fa-address-book"></i> Contact</a>
-        </li>
-      </ul> -->
+     
     </div>
 
   </nav>
 <div class="container ">
 
 
-  <!--/.Navbar-->
   <div class="routerPadding ">
     <router-outlet></router-outlet>
   </div>
+  
 
 </div>
+<div class="container fixed-bottom" *ngIf="!cookieExists">
+  <div class="row stylish-color lighten-1 pt-2 pb-2 cookieRow d-flex">
+    <div class="col-md-9 text-white justify-content-center align-self-center">
+      This site uses cookies to provide the provide the best services and functions. By continuing to use this site you agree to the privacy policy. <a routerLink="/privacy-policy">Read More</a>
+    </div>
+    <div class="col-md-3 justify-content-center align-self-center text-center">
+      <button class="btn btn-success" (click)="cookie()">Ok</button> 
+      <button class="btn btn-warning" routerLink="/privacy-policy">More Info</button> 
+    </div>  
+  </div>
+</div>
+
