--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ body{
     background-image: url("./assets/serverBackGround.jpg");
     background-size: auto;
     background-repeat: no-repeat;
+    height: 100% !important;
+}
+html{
     height: 100%;
 }
 
