about and skills changes

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,9 +4,9 @@
       <div class="jumbotron animated zoomIn">
       <h1 class="text-center signature uppercase"><b> About This Site </b></h1>
       <br>
-      <h4><b>Welcome!</b> <!--I use this website to experiment with new styles and techniques.-->
-         The purpose of this sight is to show off some of my web development skills and experiences in an interactive and informative fashion.
-         Im always working on different ways to improve this site in my free time.
+      <h4><b>Welcome!</b><br>
+         The purpose of this site is to display some of my skills and experiences in an interactive and informative fashion.
+         <br>Im always working on different ways to improve this site.<br><br>
          Feel free to contact me if you have any comments, questions, or feedback.
         <br>
         <p class="signature">Nicholas Glenn</p>
