--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -12,81 +12,86 @@
         <div class="row">
           <div class="col-md">
             <ul>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">HTML5 and CSS</span></h4>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class=""><i class="fab fa-html5"></i>  <i class="fab fa-css3"></i> HTML5 & CSS3</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">SharePoint</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-bitbucket"></i> BitBucket</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">SAP</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-github"></i> GitHub</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">SAP UI 5</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-angular"></i> AngularJS/Angular V2-6</span></h4>
               </li>
-              <li>
-                  <h4 class="h4class"><span class="rounded hoverable">SAP Hybris (C/4HANA)</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-node"></i> NodeJS</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-js"></i> JavaScript</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-aws"></i> Amazon AWS EC2</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-java"></i> JAVA</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">SharePoint</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">SAP</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">SAP UI 5</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                  <h4 class="h4class"><span class=" ">SAP Hybris (C/4HANA)</span></h4>
                 </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Bootstrap</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Bootstrap</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">AngularJS/Angular V2-6</span></h4>
+            
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">MongooseJS</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">NodeJS</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Express</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">MongooseJS</span></h4>
+           
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">MongoDB</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Express</span></h4>
+            
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Windows server 2016</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">JavaScript</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">IIS</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">MongoDB</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Amazon AWS EC2</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Windows server 2016</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">IIS</span></h4>
-              </li>
-              <li>
-                  <h4 class="h4class"><span class="rounded hoverable">Apache2</span></h4>
+              <li class=" rounded hoverable">
+                  <h4 class="h4class"><span class=" ">Apache2</span></h4>
                 </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">JAVA</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Over four years of Microsoft Visual Studio experience.</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">BitBucket</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">GitHub</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Engineering software including AutoCAD and CATIA.</span></h4>
-              </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">DBAN</span></h4>
+             
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Over four years of Microsoft Visual Studio experience.</span></h4>
               </li>
 
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">JAMF Software Casper Management Suite</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Engineering software including AutoCAD and CATIA.</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Code42 CrashPlan server based backup</span></h4>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">DBAN</span></h4>
               </li>
-              <li>
-                <h4 class="h4class"><span class="rounded hoverable">Sophos Anti-Virus Software</span></h4>
+
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">JAMF Software Casper Management Suite</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Code42 CrashPlan server based backup</span></h4>
+              </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Sophos Anti-Virus Software</span></h4>
               </li>
             </ul>
 
