fixes and updates

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -6,10 +6,10 @@
       <br>
       <h4><b>Welcome!</b><br>
          The purpose of this site is to display some of my skills and experiences in an interactive and informative fashion.
-         <br>Im always working on different ways to improve this site.<br><br>
+         <br>I am always looking for ways to improve this site.<br><br>
          Feel free to contact me if you have any comments, questions, or feedback.
         <br>
-        <p class="signature">Nicholas Glenn</p>
+        <p class="signature"><a href="mailto:glennn@mail.gvsu.edu">Nicholas Glenn</a></p>
       </h4>
       <br>
      
