--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -57,7 +57,7 @@
             <li>
                Insured global corporate websites complied with GDPR.
             </li>
-            <button class="btn btn-success btn-lg form-control vertical-align-center" data-toggle="modal" data-target="#safModal">About Comapany </button>                                 
+            <button class="btn btn-success btn-lg form-control vertical-align-center" data-toggle="modal" data-target="#safModal">About Company </button>                                 
         </div>
       </div>
       
@@ -92,7 +92,7 @@
                   <p>Manage and maintain classroom and lab equipment.</p>
                 </li>
           </ul>
-          <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#gvsuModal">About Comapany </button>                     
+          <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#gvsuModal">About Company </button>                     
           
         </div>
         
@@ -150,7 +150,7 @@
                 </li>
 
               </ul> 
-              <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#ouwbsmModal">About Comapany </button>                     
+              <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#ouwbsmModal">About Company </button>                     
             </div>
       </div>
       
@@ -184,7 +184,7 @@
                 </li>
 
               </ul>        
-          <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#thModal">About Comapany </button>                             
+          <button class="btn btn-success btn-lg form-control" data-toggle="modal" data-target="#thModal">About Company </button>                             
         </div>
       </div>
      
