fixes and updates to work and skills

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -40,6 +40,9 @@
                 <h4 class="h4class"><span class=" ">SharePoint</span></h4>
               </li>
               <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" ">Slack</span></h4>
+              </li>
+              <li class=" rounded hoverable">
                 <h4 class="h4class"><span class=" ">SAP</span></h4>
               </li>
               <li class=" rounded hoverable">
