--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -22,31 +22,28 @@
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body black-text ">
             <li>
-                Designed and implemented dynamic Content Management System to display IT news and announcements. Allowed IT managers to relay IT information with all members of the organization.
+                Designed, developed, and implemented dynamic Content Management System to display IT news and announcements. Allowed IT managers to relay IT information with all members of the organization.
             </li>
             <li>
-               Participated in the vendor selectiona and evaluation process for contractors.
+               Involved in consultant evaluation and selection process for SAP C/4HANA implementation.
             </li>
             <li>
-                Developed and supported multiple region and language dynamic external facing websites to reach customers effectively in all SAF-Holland markets. 
+                Developed and supported multiple regions and languages on dynamic external facing websites to reach SAF-Holland's global customers. 
             </li>
             <li>
-                Mentored new interns with learning development standards and new website development.
+                Mentored new interns on the development standards and taught them how to develop websites.
             </li>
             <li>
                  Designed and implemented dynamic Content Management Systems for internal websites.
             </li>
             <li>
-                Developed and supported multiple websites in different languages and regions.
-            </li>
-            <li>
                 Managed multiple JSON databases.
             </li>
             <li>
-                Resolved Helpdesk tickets assigned to the Web Development team.
+                Evaluated consultant proposals based on organizational needs. 
             </li>
             <li>
-                Migrated data in MongoDB.
+                Resolved Helpdesk tickets assigned to the Web Development team.
             </li>
             <li>
                 Developed and implemented inventory management software for testing labs in North America.
@@ -55,7 +52,7 @@
                 Work with contractors on software implementation.
             </li>
             <li>
-               Insured global corporate websites complied with GDPR.
+               Ensured global corporate websites complied with GDPR.
             </li>
             <button class="btn btn-success btn-lg form-control vertical-align-center" data-toggle="modal" data-target="#safModal">About Company </button>                                 
         </div>
@@ -122,10 +119,10 @@
                   <p>Developed a method to take physical inventory of all electronic assets for the School of Medicine.</p>
                 </li>
                 <li>
-                  <p>Worked with Apple Care to manage hardware issues covered under warranty.</p>
+                  <p>Collaborated with Apple Care to resolve hardware warranty issues.</p>
                 </li>
                 <li>
-                  <p>Assisted staff, faculty and students with computer issues.</p>
+                  <p>Assisted staff, faculty and students with computer issues and learning Mac OS.</p>
                 </li>
                 <li>
                   <p>Loaded a custom image onto 130 new MacBook Pros using Casper Management Suite.</p>
