final work experience updates

--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -21,39 +21,45 @@
   
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body black-text ">
+           <ul>
             <li>
-                Designed, developed, and implemented dynamic Content Management System to display IT news and announcements. Allowed IT managers to relay IT information with all members of the organization.
+               <p>Worked 20-30 Hours a week while enrolled as a full-time student at GVSU.</p>
             </li>
             <li>
-               Involved in consultant evaluation and selection process for SAP C/4HANA implementation.
+                <p>Designed, developed, and implemented dynamic Content Management System to display IT news and announcements. Allowed IT managers to relay IT information with all members of the organization.</p>
             </li>
             <li>
-                Developed and supported multiple regions and languages on dynamic external facing websites to reach SAF-Holland's global customers. 
+                <p>Involved in a consultant evaluation and selection process for a SAP Hybris (C/4 HANA) implementation.</p>
             </li>
             <li>
-                Mentored new interns on the development standards and taught them how to develop websites.
+                <p>Developed and supported multiple regions and languages on dynamic external facing websites to reach SAF-Holland's global customers. </p>
             </li>
             <li>
-                 Designed and implemented dynamic Content Management Systems for internal websites.
+                <p>Mentored new interns on the development standards and taught them how to develop websites.</p>
             </li>
             <li>
-                Managed multiple JSON databases.
+                <p>Designed and implemented dynamic Content Management Systems for internal websites.</p>
             </li>
             <li>
-                Evaluated consultant proposals based on organizational needs. 
+                <p>Managed multiple JSON databases.</p>
             </li>
             <li>
-                Resolved Helpdesk tickets assigned to the Web Development team.
+                <p>Evaluated consultant proposals based on organizational needs. </p>
             </li>
             <li>
-                Developed and implemented inventory management software for testing labs in North America.
+                <p>Resolved Helpdesk tickets assigned to the Web Development team.</p>
             </li>
             <li>
-                Work with contractors on software implementation.
+                <p>Developed and implemented inventory management solution for the North America testing labs.</p>
             </li>
             <li>
-               Ensured global corporate websites complied with GDPR.
+                <p>Work with contractors to implement software.</p>
             </li>
+            <li>
+                <p>Ensured global corporate websites complied with GDPR.</p>
+            </li>
+
+            </ul>
             <button class="btn btn-success btn-lg form-control vertical-align-center" data-toggle="modal" data-target="#safModal">About Company </button>                                 
         </div>
       </div>
@@ -101,7 +107,7 @@
     <div class="card">
       <div class="card-header white-text special-color-dark text-center" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
         <h2 class="mb-0">
-            Oakland University William Beaumont School of Medicine
+            Oakland University WBSM
             <br>
         </h2>            
         <h4 class="mb-0">            
@@ -116,25 +122,25 @@
         <div class="card-body black-text">
             <ul>
                 <li>
-                  <p>Developed a method to take physical inventory of all electronic assets for the School of Medicine.</p>
+                  <p>Developed and implemented a method to take physical inventory of all electronic assets for the School of Medicine.</p>
                 </li>
                 <li>
                   <p>Collaborated with Apple Care to resolve hardware warranty issues.</p>
                 </li>
                 <li>
-                  <p>Assisted staff, faculty and students with computer issues and learning Mac OS.</p>
+                  <p>Assisted staff, faculty and students including resolving computer issues and learning Mac OS.</p>
                 </li>
                 <li>
                   <p>Loaded a custom image onto 130 new MacBook Pros using Casper Management Suite.</p>
                 </li>
                 <li>
-                  <p>Use of JAMF Software’s Casper Management Suite to manage Apple computers.</p>
+                  <p>Utilized JAMF Software’s Casper Management Suite to manage Apple computers.</p>
                 </li>
                 <li>
-                  <p>Utilization of Code42 CrashPlan to backup and recover data on staff, faculty and student devices.</p>
+                  <p>Utilized of Code42 CrashPlan to backup and recover data on staff, faculty and student devices.</p>
                 </li>
                 <li>
-                  <p>Erasing hard drives to a Department of Defense standard using Darik’s Nuke And Boot (DBAN).</p>
+                  <p>Erased hard drives to a Department of Defense standard using Darik’s Boot And Nuke (DBAN).</p>
                 </li>
                 <li>
                   <p>Removal of viruses and malware from staff, faculty and student devices.</p>
