--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-flex ">
 
-<div class="col animated rotateInUpLeft">
+<div class="col animated fadeIn">
 <div class="accordion" id="accordion"  style="background-color: black !important;">
     <div class="card" style="border-top: none !important;" >
       <div class="card-header white-text special-color-dark text-center waves-effect"  type="button"  id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" >
