--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,10 @@ body{
     background-size: auto;
     background-repeat: no-repeat;
     height: 100% !important;
+    width: 100%;
 }
 html{
     height: 100%;
+    width:100%
 }
 
