updates to education

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -8,7 +8,7 @@
           <h5 class="card-title text-center">
               School of Computing & Information Systems
               <br>
-              2016 - Current
+              2016 - APRIL 2019
             </h5>
 
           <ul class="fa-ul">
